--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^9.1.2",
+    "@react-three/postprocessing": "^3.0.4",
     "gsap": "^3.13.0",
     "next": "15.3.2",
+    "p5": "^2.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "styled-components": "^6.1.18"
+    "react-p5-wrapper": "^4.1.2",
+    "styled-components": "^6.1.18",
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.176.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
